--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "sib-api-v3-sdk": "^8.5.0"
   },
